final command and partial notification